force-app/main/objects/Price_Trend__c.object
<CustomObject>
    <description>Object to store information like price increase percentages and yearly unit rates.</description>
    <fields>
        <fullName>Applicable_Year__c</fullName>
        <defaultValue>TEXT(YEAR(TODAY()))</defaultValue>
        <inlineHelpText>Add value of calendar year for whch the rates/price increase is applicable</inlineHelpText>
        <label>Applicable Year</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BU</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Increase_age__c</fullName>
        <inlineHelpText>Renewal Price Increase percentage</inlineHelpText>
        <label>Price Increase %age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Unit_Rates__c</fullName>
        <inlineHelpText>Add the applicable Unit Rates for each respective BU and currency</inlineHelpText>
        <label>Unit Rates</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Price Trend</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Applicable_Year__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Price_Increase_age__c</columns>
        <columns>Unit_Rates__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PTR-{0000}</displayFormat>
        <label>Price Trend Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Trends</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>